infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: muhammedajmal/product-srv:v1
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
