infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: muhammedajmal/user-srv:v1
---

apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
