infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  rules:
  - host: ajmal.com
    http:
      paths:
      - path: /user-srv
        pathType: Prefix
        backend:
          service:
            name: user-srv
            port:
              number: 3004
  ingressClassName: nginx
